--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,5 @@ serde_json = "1.0.120"
 rand = "0.8.5"
 getrandom = {version = "0.2.15", features = ["js"]}
 web-sys = {version = "0.3.69", features = ["MessageEvent", "WebSocket"]}
-#js-sys = "0.3.69"
+js-sys = "0.3.69"
 serde-wasm-bindgen = "0.6.5"
