--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,9 @@
 	"recommendations": [
 		"rust-lang.rust-analyzer",
 		"vadimcn.vscode-lldb",
-		"tamasfe.even-better-toml"
+		"tamasfe.even-better-toml",
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
+		"bradlc.vscode-tailwindcss"
 	]
 }
