--- a/www/package.json
+++ b/www/package.json
@@ -1,42 +1,67 @@
 {
-  "name": "ppm-web-client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@material-tailwind/react": "^2.1.9",
-    "@tabler/icons-react": "^3.11.0",
-    "clsx": "^2.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-initials-avatar": "^1.1.2",
-    "tailwind-merge": "^2.4.0",
-    "usehooks-ts": "^3.1.0",
-    "uuid": "^10.0.0",
-    "ppm-wasm": "file:../pkg"
-  },
-  "devDependencies": {
-    "@types/react": "18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.4",
-    "vite-plugin-wasm": "^3.3.0",
-    "vite-tsconfig-paths": "^4.3.2"
-  }
+	"name": "ppm-web-client",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"format": "prettier --write .",
+		"lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@material-tailwind/react": "^2.1.9",
+		"@tabler/icons-react": "^3.11.0",
+		"clsx": "^2.1.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-initials-avatar": "^1.1.2",
+		"tailwind-merge": "^2.4.0",
+		"usehooks-ts": "^3.1.0",
+		"uuid": "^10.0.0",
+		"ppm-wasm": "file:../pkg"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.7.0",
+		"@types/eslint-config-prettier": "^6.11.3",
+		"@types/eslint__js": "^8.42.3",
+		"@types/react": "18.2.42",
+		"@types/react-dom": "^18.3.0",
+		"@types/uuid": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "^7.17.0",
+		"@typescript-eslint/parser": "^7.17.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^9.7.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.9",
+		"postcss": "^8.4.40",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"tailwindcss": "^3.4.6",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^7.17.0",
+		"vite": "^5.3.4",
+		"vite-plugin-wasm": "^3.3.0",
+		"vite-tsconfig-paths": "^4.3.2"
+	},
+	"prettier": {
+		"arrowParens": "avoid",
+		"printWidth": 120,
+		"semi": true,
+		"singleQuote": true,
+		"trailingComma": "none",
+		"useTabs": true,
+		"plugins": [
+			"prettier-plugin-tailwindcss"
+		]
+	},
+	"postcss": {
+		"plugins": {
+			"tailwindcss": {},
+			"autoprefixer": {}
+		}
+	}
 }
