--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
 	"[rust]": {
 		"editor.defaultFormatter": "rust-lang.rust-analyzer",
 		"editor.formatOnSave": true,
-		"editor.formatOnSaveMode": "file"
+		"editor.formatOnSaveMode": "file",
 	},
+	"rust-analyzer.cargo.target": "wasm32-unknown-unknown",
 	"lldb.displayFormat": "auto",
 	"lldb.showDisassembly": "auto",
 	"lldb.dereferencePointers": true,
