--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,33 @@
 [package]
 name = "web"
-description = "WASM module for the pppm web client"
+description = "WASM module for the ppm web client"
 repository = "https://github.com/cloudgazing/ppm-web-client"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-#curve25519-dalek = "4.1.3"
-ed25519-dalek = {version = "2.1.1", features = ["serde"]}
-reqwest = "0.12.5"
-sha2 = "0.10.8"
-wasm-bindgen = "0.2.92"
-wasm-bindgen-futures = "0.4.42"
-x25519-dalek = {version="2.0.1", features=["static_secrets", "serde"]}
-xeddsa = "1.0.2"
-#bytes = "1.6.1"
-serde = "1.0.204"
-#serde_bytes = "0.11.15"
-serde_json = "1.0.120"
-#hkdf = "0.12.4"
+ed25519-dalek = { version = "2.1.1", features = ["serde"] }
+getrandom = { version = "0.2.15", features = ["js"] }
+js-sys = "0.3.70"
+ppm-models = { path = "./models" }
 rand = "0.8.5"
-getrandom = {version = "0.2.15", features = ["js"]}
-web-sys = {version = "0.3.69", features = ["MessageEvent", "WebSocket", "console"]}
-js-sys = "0.3.69"
+reqwest = "0.12.5"
+serde = "1.0.208"
 serde-wasm-bindgen = "0.6.5"
+serde_json = "1.0.125"
+sha2 = "0.10.8"
+wasm-bindgen = "0.2.93"
+wasm-bindgen-futures = "0.4.43"
+wasm-cookies = "0.2.1"
+web-sys = { version = "0.3.70", features = ["MessageEvent", "WebSocket", "console"] }
+x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
+xeddsa = "1.0.2"
 
-ppm-models = {path = "./models"}
-
+#curve25519-dalek = "4.1.3"
+#hkdf = "0.12.4"
+#bytes = "1.6.1"
+#serde_bytes = "0.11.15"
