--- a/www/package.json
+++ b/www/package.json
@@ -12,40 +12,41 @@
 	},
 	"dependencies": {
 		"@material-tailwind/react": "^2.1.9",
-		"@tabler/icons-react": "^3.11.0",
+		"@tabler/icons-react": "^3.12.0",
 		"clsx": "^2.1.1",
+		"ppm-wasm": "file:../pkg",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-initials-avatar": "^1.1.2",
-		"tailwind-merge": "^2.4.0",
+		"react-router-dom": "^6.26.1",
+		"tailwind-merge": "^2.5.2",
 		"usehooks-ts": "^3.1.0",
-		"uuid": "^10.0.0",
-		"ppm-wasm": "file:../pkg"
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.7.0",
+		"@eslint/js": "^9.9.0",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/eslint__js": "^8.42.3",
 		"@types/react": "18.2.42",
 		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^10.0.0",
-		"@typescript-eslint/eslint-plugin": "^7.17.0",
-		"@typescript-eslint/parser": "^7.17.0",
+		"@typescript-eslint/eslint-plugin": "^8.1.0",
+		"@typescript-eslint/parser": "^8.1.0",
 		"@vitejs/plugin-react": "^4.3.1",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^9.7.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.9",
-		"postcss": "^8.4.40",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"tailwindcss": "^3.4.6",
+		"postcss": "^8.4.41",
+		"prettier-plugin-tailwindcss": "^0.6.6",
+		"tailwindcss": "^3.4.10",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^7.17.0",
-		"vite": "^5.3.4",
+		"vite": "^5.4.1",
 		"vite-plugin-wasm": "^3.3.0",
-		"vite-tsconfig-paths": "^4.3.2"
+		"vite-tsconfig-paths": "^5.0.1"
 	},
 	"prettier": {
 		"arrowParens": "avoid",
