Changed eslint config to typescript

--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -33,5 +33,5 @@
 			"~/*": ["./src/*"]
 		}
 	},
-	"include": ["src", "vite.config.ts", "tailwind.config.ts", "eslint.config.js"]
+	"include": ["src", "vite.config.ts", "tailwind.config.ts", "eslint.config.ts"]
 }
