--- a/www/package.json
+++ b/www/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"format": "prettier --write .",
-		"lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+		"lint": "eslint . --report-unused-disable-directives --max-warnings 0 --flag unstable_ts_config",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -27,6 +27,7 @@
 		"@eslint/js": "^9.9.0",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/eslint__js": "^8.42.3",
+		"@types/node": "^22.4.1",
 		"@types/react": "18.2.42",
 		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^10.0.0",
@@ -36,7 +37,8 @@
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-import": "^2.29.1",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import-x": "^3.1.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"postcss": "^8.4.41",
