--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "web"
 description = "WASM module for the ppm web client"
 repository = "https://github.com/cloudgazing/ppm-web-client"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
@@ -10,24 +10,15 @@ license = "MIT OR Apache-2.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-ed25519-dalek = { version = "2.1.1", features = ["serde"] }
-getrandom = { version = "0.2.15", features = ["js"] }
 js-sys = "0.3.70"
 ppm-models = { path = "./models" }
-rand = "0.8.5"
-reqwest = "0.12.5"
-serde = "1.0.208"
+reqwest = "0.12.7"
+serde = { version = "1.0.210", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
-serde_json = "1.0.125"
-sha2 = "0.10.8"
+serde_json = "1.0.128"
+tsify-next = "0.5.4"
+uuid = { version = "1.10.0", features = ["js", "serde", "v4"] }
 wasm-bindgen = "0.2.93"
 wasm-bindgen-futures = "0.4.43"
 wasm-cookies = "0.2.1"
-web-sys = { version = "0.3.70", features = ["MessageEvent", "WebSocket", "console"] }
-x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
-xeddsa = "1.0.2"
-
-#curve25519-dalek = "4.1.3"
-#hkdf = "0.12.4"
-#bytes = "1.6.1"
-#serde_bytes = "0.11.15"
+web-sys = { version = "0.3.70", features = ["console", "MessageEvent", "Storage", "WebSocket", "Window"] }
