--- a/www/package.json
+++ b/www/package.json
@@ -1,52 +1,60 @@
 {
 	"name": "ppm-web-client",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.2.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"format": "prettier --write .",
 		"lint": "eslint . --report-unused-disable-directives --max-warnings 0 --flag unstable_ts_config",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "vercel build --prod && vercel deploy --prebuilt --prod"
 	},
 	"dependencies": {
-		"@material-tailwind/react": "^2.1.9",
-		"@tabler/icons-react": "^3.12.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.439.0",
 		"ppm-wasm": "file:../pkg",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-initials-avatar": "^1.1.2",
 		"react-router-dom": "^6.26.1",
 		"tailwind-merge": "^2.5.2",
-		"usehooks-ts": "^3.1.0",
-		"uuid": "^10.0.0"
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.9.0",
+		"@eslint/js": "^9.10.0",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/eslint__js": "^8.42.3",
-		"@types/node": "^22.4.1",
-		"@types/react": "18.2.42",
+		"@types/node": "^22.5.4",
+		"@types/react": "18.3.5",
 		"@types/react-dom": "^18.3.0",
-		"@types/uuid": "^10.0.0",
-		"@typescript-eslint/eslint-plugin": "^8.1.0",
-		"@typescript-eslint/parser": "^8.1.0",
+		"@typescript-eslint/eslint-plugin": "^8.4.0",
+		"@typescript-eslint/parser": "^8.4.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.9.0",
+		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import-x": "^3.1.0",
+		"eslint-import-resolver-typescript": "^3.6.3",
+		"eslint-plugin-import-x": "^4.2.1",
 		"eslint-plugin-react-hooks": "^4.6.2",
-		"eslint-plugin-react-refresh": "^0.4.9",
-		"postcss": "^8.4.41",
+		"eslint-plugin-react-refresh": "^0.4.11",
+		"postcss": "^8.4.45",
+		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.10",
 		"typescript": "^5.5.4",
-		"typescript-eslint": "^7.17.0",
-		"vite": "^5.4.1",
+		"typescript-eslint": "^8.4.0",
+		"vite": "^5.4.3",
+		"vite-plugin-checker": "^0.8.0",
+		"vite-plugin-top-level-await": "^1.4.4",
 		"vite-plugin-wasm": "^3.3.0",
 		"vite-tsconfig-paths": "^5.0.1"
 	},
@@ -55,7 +63,7 @@
 		"printWidth": 120,
 		"semi": true,
 		"singleQuote": true,
-		"trailingComma": "none",
+		"trailingComma": "es5",
 		"useTabs": true,
 		"plugins": [
 			"prettier-plugin-tailwindcss"
