--- a/www/package.json
+++ b/www/package.json
@@ -22,12 +22,12 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.439.0",
-		"ppm-wasm": "file:../pkg",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.1",
 		"tailwind-merge": "^2.5.2",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"wasm-module": "file:../wasm/pkg"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.10.0",
