Added cookie domain env var

--- a/wasm/.cargo/config.toml
+++ b/wasm/.cargo/config.toml
@@ -7,5 +7,6 @@ LOGIN_URL = ""
 SIGNUP_URL = ""
 VERIFY_URL = ""
 WS_URL = ""
+COOKIE_DOMAIN = ""
 AUTH_TOKEN_NAME = "AT"
 CSRF_TOKEN_NAME = "__Secure-Csrf-Token"
