--- a/www/package.json
+++ b/www/package.json
@@ -12,21 +12,25 @@
 		"deploy": "vercel build --prod && vercel deploy --prebuilt --prod"
 	},
 	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"ldrs": "^1.0.2",
 		"lucide-react": "^0.439.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^6.26.1",
+		"react-router-dom": "^6.26.2",
+		"react-spinners": "^0.14.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
+		"usehooks-ts": "^3.1.0",
 		"wasm-module": "file:../wasm/pkg"
 	},
 	"devDependencies": {
@@ -50,7 +54,7 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"tailwindcss": "^3.4.10",
-		"typescript": "^5.5.4",
+		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.4.0",
 		"vite": "^5.4.3",
 		"vite-plugin-checker": "^0.8.0",
